Added salalem logo

--- a/content/index.html
+++ b/content/index.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <h1>404</h1>
-
+    <h2>You are either trying to configure something incorrectly or you're someone who should not be here, which one is it?</h2>
+    <a href="https://salalem.com"><img height="125em" width="125em "src="./salalem.png"/></a>
     <div class="frame">
      <div></div>
      <div></div>
